--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".NewUserActivity" />
         <activity android:name=".NewUserActivityTwo" />
-        <activity android:name=".AddGamesActivity"></activity>
+        <activity android:name=".AddGamesActivity" />
+        <activity android:name=".PreferencesActivity"></activity>
     </application>
 
 </manifest>
