--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         <activity android:name=".PreferencesActivity" />
         <activity
             android:name=".MainProfileActivity"
-            android:label="@string/title_activity_main_profile"></activity>
+            android:label="@string/title_activity_main_profile" />
+        <activity android:name=".NewGroupActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsActivityTwo"></activity>
     </application>
 
 </manifest>
