Finished Task 3 Method 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".SettingsActivityTwo" />
         <activity android:name=".ChooseGameActivity" />
         <activity android:name=".PresentMatchActivity" />
-        <activity android:name=".SuccessfulMatchActivity"></activity>
+        <activity android:name=".SuccessfulMatchActivity" />
+        <activity android:name=".GroupMemberOptionsActivity"></activity>
     </application>
 
 </manifest>
